# guix-rs

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  NOTES.md  README.md  SECURITY.md  manifest.scm
.github/workflows/: ci.yml  publish.yml
assets/: guix-gui.desktop
guix-gui/: Cargo.toml
guix-gui/i18n/de/: guix-gui.ftl
guix-gui/i18n/en/: guix-gui.ftl
guix-gui/i18n/es/: guix-gui.ftl
guix-gui/i18n/fr/: guix-gui.ftl
guix-gui/i18n/it/: guix-gui.ftl
guix-gui/i18n/pt-BR/: guix-gui.ftl
guix-gui/i18n/zh-CN/: guix-gui.ftl
guix-gui/src/: app.rs  app_metadata.rs  carrier.rs  channels.rs  desktop.rs  discovery.rs  fallback_icon.rs  i18n.rs  lib.rs  main.rs  operation_subscription.rs  progress_summary.rs  recommended.rs  settings.rs  styles.rs  terminal_buffer.rs  util.rs
guix-gui/src/views/: about.rs  channels.rs  home.rs  installed.rs  mod.rs  progress.rs  search.rs  system.rs  updates.rs
guix-gui/tests/: discovery.rs
guix-gui/tests/fixtures/discovery/: channels-mixed.json  packages-mixed.json
libguix/: Cargo.toml  LICENSE-APACHE  README.md
libguix/src/: archive.rs  build.rs  channels.rs  cmd.rs  describe.rs  discover.rs  error.rs  gc.rs  installed.rs  lib.rs  operation.rs  options.rs  package.rs  process.rs  progress.rs  pull.rs  retry.rs  shell.rs  system.rs  types.rs
libguix/src/parsers/: lines.rs  mod.rs  progress.rs  recutils.rs  sexp.rs  tsv.rs
libguix/src/repl/: actor.rs  channel_ops.scm  framer.rs  installed_ops.scm  mod.rs  op.rs
libguix/tests/: channels_tests.rs  live.rs  operation.rs  pull_repl.rs  repl_interrupt.rs  repl_ops.rs  retry.rs  system.rs
libguix/tests/common/: mod.rs
libguix/tests/fixtures/: describe-channels.scm  dry-build-hello.txt  dry-install-hello.txt  generations.tsv  installed.tsv  repl-search.sexp  search-hello.recutils  show-hello.recutils
libguix/tests/fixtures/channels/: cons-single.scm  lock-with-use-modules.scm  minimal-channel.scm  no-commit.scm  no-introduction.scm  with-top-level-comment.scm  wrapped-and-commented.scm
polkit/: README.md  org.libguix.system-pull.policy  org.libguix.system-reconfigure.policy
