[workspace]
resolver = "2"
members = [
    "libguix",
    "guix-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
authors = ["Franz Geffke <mail@gofranz.com>"]
repository = "https://github.com/franzos/guix-rs"
homepage = "https://github.com/franzos/guix-rs"
license = "GPL-3.0-only"
