[workspace]
resolver = "2"
members = [
    "libguix",
    "guix-gui",
]

[workspace.package]
version = "0.1.13"
edition = "2021"
rust-version = "1.79"
authors = ["Franz Geffke <mail@gofranz.com>"]
repository = "https://github.com/franzos/guix-rs"
homepage = "https://github.com/franzos/guix-rs"
# License is declared per-crate: libguix is MIT/Apache-2.0 (library —
# permissive so it can be embedded anywhere), guix-gui is GPL-3.0-only
# (end-user binary — copyleft).
